syntax = "proto3";

package proto;

option go_package = "sgsg/proto";

enum UserRole {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
}

message User {
    string id = 1;
    string created = 2;
    string updated = 3;
    optional string deleted = 4;

    string email = 5;
    UserRole role = 6;
    string sub = 7;
    string avatar = 8;
    string subscription_id = 9;
    optional string subscription_end = 10;
}
